--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, h1, p {
 /* Add some basic styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
+/*     background-color: #f8f8f8; */
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(rahul.jpeg);
     background-position: center;
     background-repeat: no-repeat;
@@ -29,7 +29,7 @@ body {
     max-width: 400px; /* Adjust as needed for your design */
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(55, 55, 55, 0.9);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     text-align: left;
     margin: 10px;
 }
@@ -73,8 +73,9 @@ span{
 
  @media(max-width:768px){
     h1 {
-    font-size: 36px;
+    font-size: 28px;
     margin-bottom: 24px;
+        margin-top:10px;
 }
 p{
         font-size: 22px;
